--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
 		<script type="text/javascript" src="/scripts/libs/datatables/DT_bootstrap.js"></script>
 -->  
 
-		<script data-main="/scripts/client" src="/scripts/libs/require.js"></script> 
+		<!-- <script type="text/javascript" src="/scripts/models/model.user.js"></script> -->
+		<script data-main="/scripts/main" src="/scripts/libs/require.js"></script> 
 
 		<link href="/scripts/libs/jquery.qtip.css" 												rel="stylesheet">
   	<link href="/scripts/libs/datatables/jquery.dataTables.css" 			rel="stylesheet">
