--- a/public/index.html
+++ b/public/index.html
@@ -73,5 +73,158 @@
 				</div>
 	    </div> 
 
+			<!-- Main template -->
+			<script type="text/x-jquery-tmpl" id="tmpl-main-region">
+				<div class="row">
+					<h4 class="span3">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, uis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
+					</h4> 
+				</div>
+			</script>
+	    <!-- End of main template -->
+
+	    <!-- Department templates -->
+			<script type="text/x-jquery-tmpl" id="tmpl-department-maintenance">
+				<div class="span8">
+					<form id="department-create" class="form-horizontal">
+						<fieldset>
+							<legend>Departmrnt</legend>
+
+							<div class="control-group">			
+								<label class="control-label" for="name">Depatment:</label>
+								<div class="controls">
+									<input name="name" id="name" type="text" />
+								</div>
+							</div>	
+
+							<div class="form-actions">			
+								<button class="btn btn-primary" id="save-button" type="submit"><i class="icon-ok-sign icon-white" /> Save</button>
+								<button class="btn " id="cancel-button">Cancel</button>
+							</div>	
+
+						</fieldset>
+					</form>
+				</div>	
+			</script>
+	    <!-- End of department templates -->
+
+
+			<!-- User templates -->
+			<script type="text/x-jquery-tmpl" id="tmpl-user-navigation">
+				<div class="alert alert-info span3" style="margin-bottom: 60px;">
+					Add a new user to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-user"></i> Create »</button>  
+				</div>
+			</script>
+
+			<script type="text/x-jquery-tmpl" id="tmpl-users-layout">
+				<div>
+					<div id="user-navigation-region"></div>
+					<div id="user-list-region"></div>
+				</div>	
+			</script>
+
+			<script type="text/x-jquery-tmpl" id="tmpl-user-grid-header">
+				<thead><tr><th>First name</th><th>Last name</th><th>Email</th><th>Department</th><th> </th></tr></thead><tbody>
+			</script>
+
+			<script type="text/x-jquery-tmpl" id="tmpl-user-item">
+				<td>${firstname}</td> 
+				<td>${lastname}</td>
+				<td>${email}</td>
+				<td>${department}</td>
+				<td><button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button></td>
+			</script>
+
+			<script type="text/x-jquery-tmpl" id="tmpl-user-maintenance">
+				<div class="span8">
+					<form id="user-create" class="form-horizontal">
+						<fieldset>
+
+							<div class="control-group">	
+								<img style="margin-bottom: -30px;" class="pull-right" src="/images/blank-gravatar.jpg" id="user-gravatar" alt="users gravatar">
+								<legend>User</legend>
+							</div>	
+
+							<div class="control-group">			
+								<label class="control-label" for="firstname">First name:</label>
+								<div class="controls">
+									<input name="firstname" id="firstname" type="text" />
+								</div>
+							</div>	
+
+							<div class="control-group">			
+								<label class="control-label" for="lastname">Last name:</label>
+								<div class="controls">
+									<input name="lastname" id="lastname" type="text" />
+								</div>
+							</div>	
+
+							<div class="control-group">			
+								<label class="control-label" for="email">Email:</label>
+								<div class="controls">
+									<input name="email" id="email" class="span3" type="text" placeholder="EKM email address" />
+								</div>
+							</div>	
+
+							<div class="control-group">			
+								<label class="control-label" for="department">Department:</label>
+								<div class="controls">
+									<input name="department" id="department"  type="text" />
+								</div>	
+							</div>	
+
+							<div class="control-group">			
+								<label class="control-label" for="startdate">Start date:</label>
+								<div class="controls">
+									<input name="startdate" id="startdate" class="span2" type="text" />
+								</div>
+							</div>	
+
+							<div class="control-group">			
+								<label class="control-label" for="active">Active:</label>
+								<div class="controls">
+									<input name="active" id="active" type="checkbox" />
+								</div>
+							</div>	
+
+							<div class="form-actions">			
+								<button class="btn btn-primary" id="save-button" type="submit"><i class="icon-ok-sign icon-white" /> Save</button>
+								<button class="btn " id="cancel-button">Cancel</button>
+							</div>	
+
+						</fieldset>
+					</form>
+				</div>	
+			</script>
+
+			<!-- End of Users templates-->
+
+	    <!-- Navigation menu templates -->
+			<script type="text/x-jquery-tmpl" id="tmpl-main-navigation-menu">
+	      <div class="navbar-inner">
+	        <div class="container">
+	          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </a>
+	          <a class="brand" href="#">Application</a>
+	          <div class="nav-collapse">
+	            <ul class="nav">
+	              <li class="active">
+	              	<a id="main-home" href="#">Home</a>
+	              </li>
+	              <li>
+	              	<a id="main-about" href="#about">About</a>
+	              </li>
+	            </ul>
+							<a id="main-admin" class="btn pull-right" href="admin">Admin</a>
+	          </div>
+	        </div>
+	      </div>
+			</script>
+	    <!-- End of navigation menu templates -->
+
+
 	</body>
 </html>		
