Refactored admin routes/views and added admin sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -33,17 +33,14 @@
 	</head>
 	<body>
 
-			<!-- Top menu bar -->
-			<div id="main-navigation-menu" class="navbar navbar-fixed-top"></div>
+
 
 			<!-- Container and main region. Backbone views will get swapped in and out of the main-region-->
 	    <div class="container">
-    		<div style="margin-bottom:50px">
-					<h1>Bootstrap starter template</h1>
-					<p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-				</div>
-				<div>	
-					<div id="main-region"></div>
+      <!-- Top menu bar -->
+        <div id="main-navigation-menu" class="navbar navbar-fixed-top"></div>
+				<div class="row">	
+					<div id="main-content-region" class="span12"></div>
 				</div>
 	    </div> 
 	    
