Further working with Backbone-relational and Backbone.MondelBinder

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,14 @@
 	<head>
 		<title>A Title should go here</title>
 
-		<script data-main="/scripts/main" src="/scripts/libs/require.js"></script> 
+		<script data-main="/scripts/main" src="/scripts/libs/require.js"></script>
+
+<!--
+    // <script type="text/javascript" src="/scripts/libs/jquery-1.7.1.js"></script>
+    // <script type="text/javascript" src="/scripts/libs/underscore.js"></script>
+    // <script type="text/javascript" src="/scripts/libs/backbone.js"></script>
+    // <script type="text/javascript" src="/scripts/libs/backbone-relational.js"></script> 
+-->
 
 		<link href="/scripts/libs/jquery.qtip.css" 												rel="stylesheet">
   	<link href="/scripts/libs/datatables/jquery.dataTables.css" 			rel="stylesheet">
@@ -32,8 +39,6 @@
 
 	</head>
 	<body>
-
-
 
 			<!-- Container and main region. Backbone views will get swapped in and out of the main-region-->
 	    <div class="container">
