Added Select2 jquery plugin for improved select boxes

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     // <script type="text/javascript" src="/scripts/libs/backbone-relational.js"></script> 
 -->
 
+    <link href="/scripts/libs/select2.css"                            rel="stylesheet">
 		<link href="/scripts/libs/jquery.qtip.css" 												rel="stylesheet">
   	<link href="/scripts/libs/jquery-ui-1.8.16.custom.css" 						rel="stylesheet">
 		<link href="/scripts/libs/bootstrap/css/bootstrap.css" 						rel="stylesheet">
