Added bootstrap 2.1 and added button to remove individual users

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
 		<link href="/scripts/libs/jquery.qtip.css" 												rel="stylesheet">
   	<link href="/scripts/libs/jquery-ui-1.8.16.custom.css" 						rel="stylesheet">
 		<link href="/scripts/libs/bootstrap/css/bootstrap.css" 						rel="stylesheet">
-  	<link href="/scripts/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/scripts/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+  	<link href="/scripts/app.css" rel="stylesheet">
 
     <style>
         body {
